--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,11 @@
 page-home {
-
+    .padding-left-0 {
+        padding-left: 0 !important;
+    }
+    .padding-horizontal-10 {
+        padding: 0 10px 0 10px !important;
+    }
+    .padding-right-10 {
+        padding-right: 10px !important;
+    }
 }
