--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,4 @@
 // http://ionicframework.com/docs/theming/
-
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +12,26 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.padding-left-0 {
+    padding-left: 0 !important;
+}
+
+.padding-left-5 {
+    padding-left: 5px !important;
+}
+
+.red {
+    color: rgb(235, 0, 0);
+}
+
+.border {
+    border: 1px solid #eee;
+}
+
+.box-shadow-0 {
+    box-shadow: none !important;
+}
+
+.light {
+    background: #eee;
+}
